# mimirsbrunn

./: Cargo.toml
config/admin/: mappings.json
libs/bragi/: Cargo.toml
libs/bragi/src/: query.rs
libs/mimir/: Cargo.toml
libs/mimir2/: Cargo.toml
libs/mimir2/src/adapters/secondary/elasticsearch/: internal.rs  remote.rs
libs/mimir2/src/utils/: docker.rs
libs/tools/: Cargo.toml
libs/tools/src/: launch.rs  lib.rs
src/: utils.rs
tests/: admin.rs  cosmogony2mimir_test.rs  integration.rs.back  tests.rs
tests/steps/: admin.rs
