[package]
name = "tools"
version = "1.21.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]
edition = "2018"
description = "Tools for geocoding with Elasticsearch"
license = "AGPLv3"
repository = "https://github.com/CanalTP/mimirsbrunn.git"
keywords = [ "mimirsbrunn", "elasticsearch", "geocoding" ]
categories = [ "database" ]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
slog-scope = "4.3"
serde_json = "1"
mimir2 = { path = "../mimir2" }
places = { path = "../places" }
